# splp

./: .env  .env.shared  .gitignore  ENCRYPTION_FIX.md  GITIGNORE_GUIDE.md  QUICK_START.md  README.md  TEST_GUIDE.md  cassandra-init.cql  create-topics-kafkajs.ts  create-topics.ps1  create-topics.sh  docker-compose.yml  generate-key.js  generate-key.ps1  package.json  project-info.txt  test-encryption-compatibility.ts
.claude/: settings.local.json
command-center/: COMMAND_CENTER_GUIDE.md  README.md  index.ts  package.json
command-center/lib/: command-center.ts  (+2 more)
example-bun/: ARCHITECTURE.md  NEW_SERVICES_README.md  PARALLEL_PROCESSING.md  README.md  command-center-config.ts  run-example.sh
example-net/: ExampleNet.sln  README.md  appsettings.json  run-example.bat  run-example.ps1
splp-bun/: .env.example  .gitignore  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
splp-go/: encrypted-from-go.json  go.mod  go.sum
splp-java/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pom.xml
splp-net/: Class1.cs  GenerateKey.cs  NUGET_PACKAGE_INSTRUCTIONS.md  PACKAGE_README.md  README.md  SplpNet.csproj  appsettings.json  create-nuget-package.bat  create-nuget-package.ps1  nuget.config
splp-php/: QUICK_START.md  README.md  composer.json  debug-kafka-messages.php  test-consumer.php  test-decryption-fix.php  test-kafka-connectivity.php  test-publisher.php
splp-py/: .gitignore  .pre-commit-config.yaml  .pythonrc  DEVELOPMENT.md  LICENSE  Makefile  PACKAGE_INFO.md  QUICK_START.md  README.md  cli_interactive.py  env.example  env.production  env.production.example  pyproject.toml  run_examples.py  setup_package.py  verify_package.py
splp-py/examples/: advanced_example.py  basic_example.py  client_example.py  production_listener.py  production_publisher.py  worker_example.py
splp-py/src/kafkapy_tools/: __init__.py  __version__.py  cassandra_logger.py  cli.py  config.py  consumer.py  crypto.py  logging_config.py  messaging_client.py  producer.py  types.py  utils.py
splp-py/tests/: __init__.py  test_config.py  test_consumer.py  test_producer.py
splp-py/venv311/: pyvenv.cfg
(+178 files in other folders)
